// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status renders 1`] = `
<Status
  entities={
    Object {
      "applications": Array [
        Object {},
      ],
      "machines": Array [
        Object {},
      ],
      "model": Object {
        "cloud": "aws",
        "environmentName": "my-model",
        "modelUUID": "myuuid",
        "region": "neutral zone",
        "sla": "advanced",
        "version": "2.42.47",
      },
      "relations": Array [
        Object {},
      ],
      "remoteApplications": Array [],
      "units": Array [
        Object {},
      ],
    }
  }
  generateApplicationOnClick={[Function]}
  generateApplicationURL={[Function]}
  generateCharmURL={[Function]}
  generateMachineOnClick={[Function]}
  generateMachineURL={[Function]}
  generateUnitOnClick={[Function]}
  generateUnitURL={[Function]}
  navigateToApplication={[Function]}
  navigateToCharm={[Function]}
  navigateToMachine={[Function]}
/>
`;

exports[`Status renders with entities 1`] = `
<Panel
  focus={true}
  instanceName="status-view"
  visible={true}
>
  <div
    className="status-view__content"
  >
    <StatusModel
      changeFilter={[Function]}
      counts={
        Object {
          "applications": 1,
          "machines": 1,
          "relations": 1,
          "remoteApplications": 0,
          "units": 1,
        }
      }
      highestStatus="ok"
      key="model"
      model={
        Object {
          "cloud": "aws",
          "environmentName": "my-model",
          "modelUUID": "myuuid",
          "region": "neutral zone",
          "sla": "advanced",
          "version": "2.42.47",
        }
      }
      statusFilter={null}
    />
    <StatusApplicationList
      applications={
        Array [
          Object {},
        ]
      }
      generateApplicationOnClick={[Function]}
      generateApplicationURL={[Function]}
      generateCharmURL={[Function]}
      key="applications"
      onCharmClick={[Function]}
      statusFilter={null}
    />
    <StatusUnitList
      applications={
        Object {
          "filter": [Function],
          "getById": [Function],
          "toArray": [Function],
        }
      }
      generateMachineURL={[Function]}
      generateUnitOnClick={[Function]}
      generateUnitURL={[Function]}
      key="units"
      onMachineClick={[Function]}
      statusFilter={null}
      units={
        Array [
          Object {},
        ]
      }
    />
    <StatusMachineList
      generateMachineOnClick={[Function]}
      generateMachineURL={[Function]}
      key="machines"
      machines={
        Array [
          Object {},
        ]
      }
      statusFilter={null}
    />
    <StatusRelationList
      applications={
        Object {
          "filter": [Function],
          "getById": [Function],
          "toArray": [Function],
        }
      }
      generateApplicationURL={[Function]}
      key="relations"
      onApplicationClick={[Function]}
      relations={
        Array [
          Object {},
        ]
      }
      statusFilter={null}
    />
  </div>
</Panel>
`;

exports[`Status renders with no entities 1`] = `
<Panel
  focus={true}
  instanceName="status-view"
  visible={true}
>
  <div
    className="status-view__content"
  >
    <StatusModel
      changeFilter={[Function]}
      counts={
        Object {
          "applications": 0,
          "machines": 0,
          "relations": 0,
          "remoteApplications": 0,
          "units": 0,
        }
      }
      highestStatus="ok"
      key="model"
      model={
        Object {
          "cloud": "aws",
          "environmentName": "my-model",
          "modelUUID": "myuuid",
          "region": "neutral zone",
          "sla": "advanced",
          "version": "2.42.47",
        }
      }
      statusFilter={null}
    />
  </div>
</Panel>
`;
